Add duration metric with filter test